# wiki2gaz

./: .gitignore  LICENSE  README.md  aggregate_all_counts.py  create_wk_gazetteer.py  download_and_merge_embeddings_databases.py  example.ipynb  extract_freq_and_pages.py  lowercase_db.py  map_wikidata_to_classes.py  map_wikidata_wikipedia.py  pyproject.toml  wikidata_extraction.py
docs/source/: conf.py  index.rst
docs/source/getting-started/: 1-preprocess-wikipedia-dump.rst  2-extract-entities-mentions-frequency-counts-pages.rst  3-map-wikipedia-wikidata.rst  5-create-wikidata-gazetteer.rst  7-obtain-glove-entity-embeddings.rst  index.rst
docs/source/reference/: aggregate_all_counts.rst  create_wk_gazetteer.rst  download_and_merge_embeddings_databases.rst  extract_freq_and_pages.rst  index.rst  map_wikidata_wikipedia.rst  produce_entity2class_dict.rst  wikidata_extraction.rst
docs/source/running/: 1-preprocess-wikipedia-dump.rst  2-extract-entities-mentions-frequency-counts-pages.rst  3-map-wikipedia-wikidata.rst  4-extract-locations-wikidata.rst  5-create-wikidata-gazetteer.rst  6-map-wikidata-entities-classes.rst  7-obtain-glove-entity-embeddings.rst
tests/: test_wiki_functions.py
utils/: process_wikipedia.py
